# ai-security-engineering-foundations

./: README.md
python-ai-threat-hunter/: .gitignore  README.md  USE_CASE_PLANNING.md  ai_threat_hunter.py  external_mocks.py  log_generator.py  pyproject.toml  use_case_demo.py
typescript-ai-security-processor/: package.json  tsconfig.json
typescript-ai-security-processor/src/: AISecurityProcessor.ts  ThreatIntelligenceDB.ts  interfaces.ts  main.ts
