[tool.poetry]
name = "ai-threat-hunter"
version = "0.1.0"
description = "An AI-powered tool for detecting cybersecurity threats in network logs"
authors = ["support@trulyprivatesecurity.com"]
readme = "README.md"
packages = [{include = "ai_threat_hunter.py"}]

[tool.poetry.dependencies]
python = "^3.11"
# In a real implementation, you would uncomment and use the actual transformers library
# transformers = "^4.30.0"
# torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[tool.poetry.scripts]
threat-hunter = "ai_threat_hunter:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
